<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".MainActivity"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:ignore="Overdraw">

    <TextView
        android:id="@+id/GetStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="8dp"
        android:fontFamily="@font/quicksand"
        android:text="Getting Connected"
        android:textAlignment="center"
        android:textColor="@color/textgray"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="HardcodedText" />

    <!--suppress AndroidMissingOnClickHandler -->
    <Button
        android:id="@+id/startChat"
        android:layout_width="125dp"
        android:layout_height="42dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/chat_bubble_blue"
        android:fontFamily="@font/rubik_medium"
        android:onClick="isValidIP"
        android:text="Start Chat"
        android:textColor="#ffffff"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/ipAddressHolder"
        tools:ignore="HardcodedText" />


    <android.support.design.widget.TextInputLayout
        android:id="@+id/nicknameHolder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="60dp"
        android:textColor="#777777"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/GetStart">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/nickname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik_light"
            android:gravity="center"
            android:hint="Enter Nickname"
            android:inputType="text|textCapSentences"
            android:paddingStart="3dp"
            android:paddingTop="10dp"
            android:paddingEnd="3dp"
            android:paddingBottom="15dp"
            android:textColor="#343434"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/ipAddressHolder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="60dp"
        android:textAlignment="center"
        android:textColor="#777777"
        app:layout_constraintEnd_toStartOf="@+id/guidelineRight"
        app:layout_constraintLeft_toRightOf="@+id/guidelineLeft"
        app:layout_constraintStart_toStartOf="@+id/guidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/nicknameHolder">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/ipAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:digits="1234567890.:"
            android:fontFamily="@font/rubik_light"
            android:gravity="center"
            android:hint="Enter IP Address"
            android:inputType="text"
            android:paddingStart="3dp"
            android:paddingTop="10dp"
            android:paddingEnd="3dp"
            android:paddingBottom="15dp"
            android:textColor="#343434"
            android:textSize="18sp"
            tools:ignore="HardcodedText" />
    </android.support.design.widget.TextInputLayout>


    <android.support.constraint.Guideline
        android:id="@+id/guidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="30dp" />

    <android.support.constraint.Guideline
        android:id="@+id/guidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="30dp" />



</android.support.constraint.ConstraintLayout>