<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="10dp"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:ignore="Overdraw">

    <com.andrognito.patternlockview.PatternLockView
        android:id="@+id/pattern_lock_view"
        android:layout_width="300dp"
        app:normalStateColor="@color/colorPrimary"
        app:correctStateColor="@color/colorPrimaryDark"
        app:wrongStateColor="@color/colorAccent"
        android:layout_centerInParent="true"
        android:layout_height="300dp"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="121dp"
        android:fontFamily="@font/quicksand"
        android:text="Create Password:"
        android:textColor="#343434"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/SkipPass"
        android:layout_width="140dp"
        android:layout_height="42dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="120dp"
        android:background="@drawable/chat_bubble_blue"
        android:fontFamily="@font/rubik_medium"
        android:onClick="skipPassword"
        android:text="Set up Later"
        android:textColor="#ffffff"
        android:typeface="sans"
        tools:ignore="HardcodedText" />


</RelativeLayout>