<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/contactRecyclerView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="8dp">


    <ImageView
...
        app:layout_constraintEnd_toEndOf="@+id/avatar2"
        app:layout_constraintStart_toStartOf="@+id/avatar2"
        app:layout_constraintTop_toTopOf="@+id/avatar2"
        app:srcCompat="@drawable/ic_user" />

    <TextView
        android:id="@+id/nicknameContactList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="6dp"
        android:fontFamily="@font/quicksand"
        android:textColor="#343434"
...
